Correct SQL parameter binding in UserRepositoryImp
In the UserRepositoryImp class, the read method was updated to correctly bind the 'userId' parameter in the SQL query. This resolves an issue where the parameter was not being supplied correctly, leading to a SQL exception.

Additionally, minor code formatting improvements were made for clarity and consistency.

Fixes: #issue_number